--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -5333,7 +5333,7 @@ CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
 CONFIG_PACKAGE_luci-app-uhttpd=y
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic is not set
 # CONFIG_PACKAGE_luci-app-unbound is not set
-# CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-usb-printer is not set
 # CONFIG_PACKAGE_luci-app-usb3disable is not set
 # CONFIG_PACKAGE_luci-app-usbmodem is not set
@@ -5804,9 +5804,9 @@ CONFIG_PACKAGE_curl=y
 # CONFIG_IPTGEOIP_PRESERVE is not set
 # end of Select iptgeoip options
 
-# CONFIG_PACKAGE_miniupnpc=y
+CONFIG_PACKAGE_miniupnpc=y
 # CONFIG_PACKAGE_miniupnpd-iptables is not set
-# CONFIG_PACKAGE_miniupnpd=y
+CONFIG_PACKAGE_miniupnpd=y
 # CONFIG_PACKAGE_natpmpc is not set
 CONFIG_PACKAGE_nftables-json=y
 # CONFIG_PACKAGE_nftables-nojson is not set
