--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -4985,7 +4985,7 @@ CONFIG_PACKAGE_libudebug=y
 # CONFIG_PACKAGE_libugpio is not set
 # CONFIG_PACKAGE_libunistring is not set
 # CONFIG_PACKAGE_libunwind is not set
-CONFIG_PACKAGE_lib=y
+CONFIG_PACKAGE_libupnp=y
 # CONFIG_PACKAGE_libupnpp is not set
 # CONFIG_PACKAGE_liburcu is not set
 # CONFIG_PACKAGE_liburing is not set
