--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -4986,7 +4986,7 @@ CONFIG_PACKAGE_libudebug=y
 # CONFIG_PACKAGE_libunistring is not set
 # CONFIG_PACKAGE_libunwind is not set
 CONFIG_PACKAGE_libupnp=y
-# CONFIG_PACKAGE_libupnpp is not set
+CONFIG_PACKAGE_libupnpp=y
 # CONFIG_PACKAGE_liburcu is not set
 # CONFIG_PACKAGE_liburing is not set
 # CONFIG_PACKAGE_libusb-1.0 is not set
