--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -3943,8 +3943,8 @@ CONFIG_PACKAGE_liblz4=y
 # Firewall
 #
 # CONFIG_PACKAGE_libfko is not set
-# CONFIG_PACKAGE_libip4tc=y
-# CONFIG_PACKAGE_libip6tc=y
+CONFIG_PACKAGE_libip4tc=y
+CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_libiptext=y
 CONFIG_PACKAGE_libiptext-nft=y
 CONFIG_PACKAGE_libiptext6=y
