--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -5766,7 +5766,7 @@ CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_ip6tables-extra is not set
 # CONFIG_PACKAGE_ip6tables-mod-nat is not set
 CONFIG_PACKAGE_ip6tables-nft=y
-# CONFIG_PACKAGE_ip6tables-zz-legacy is not set
+CONFIG_PACKAGE_ip6tables-zz-legacy=y
 # CONFIG_PACKAGE_iptables-mod-checksum is not set
 # CONFIG_PACKAGE_iptables-mod-cluster is not set
 # CONFIG_PACKAGE_iptables-mod-conntrack-extra is not set
