--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -3947,7 +3947,7 @@ CONFIG_PACKAGE_liblz4=y
 # CONFIG_PACKAGE_libip6tc is not set
 CONFIG_PACKAGE_libiptext=y
 CONFIG_PACKAGE_libiptext-nft=y
-# CONFIG_PACKAGE_libiptext6 is not set
+CONFIG_PACKAGE_libiptext6=y
 CONFIG_PACKAGE_libxtables=y
 # CONFIG_IPTABLES_CONNLABEL is not set
 # end of Firewall
