--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -116,8 +116,12 @@ jobs:
       run: |
         [ -e $FILES ] && mv $FILES openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_SH
+        # 追加 NSS 满血符号（无冲突、性能全开）
+        cat $GITHUB_WORKSPACE/AX6-IPQ/nss-extra.config >> openwrt/.config
         cd openwrt
+        export FORCE_UNCONFIGURED=1
+        make defconfig V=s
+        chmod +x $GITHUB_WORKSPACE/$DIY_SH
         $GITHUB_WORKSPACE/$DIY_SH
 
     # - name: SSH connect to Actions
