--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -113,17 +113,26 @@ jobs:
         ./scripts/feeds install -a
 
     - name: Load custom config
+      #run: |
+        #[ -e $FILES ] && mv $FILES openwrt/files
+        #[ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        # 追加 NSS 满血符号（无冲突、性能全开）
+        #cat $GITHUB_WORKSPACE/AX6-IPQ/nss-extra.config >> openwrt/.config
+        #cd openwrt
+        #export FORCE_UNCONFIGURED=1
+        #make defconfig V=s
+        #chmod +x $GITHUB_WORKSPACE/$DIY_SH
+        #$GITHUB_WORKSPACE/$DIY_SH
       run: |
         [ -e $FILES ] && mv $FILES openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        # 追加 NSS 满血符号（无冲突、性能全开）
-        cat $GITHUB_WORKSPACE/AX6-IPQ/nss-extra.config >> openwrt/.config
-        cd openwrt
-        export FORCE_UNCONFIGURED=1
-        make defconfig V=s
-        chmod +x $GITHUB_WORKSPACE/$DIY_SH
-        $GITHUB_WORKSPACE/$DIY_SH
+        chmod +x $DIY_SH
 
+        cd openwrt
+
+
+
+        $GITHUB_WORKSPACE/$DIY_SH
     # - name: SSH connect to Actions
       # uses: P3TERX/ssh2actions@main
       # if: (github.event.inputs.ssh == 'true') || contains(github.event.action, 'ssh')
