--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -148,6 +148,10 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
+        if [ $? -ne 0 ]; then
+          echo "Compilation failed!"
+          exit 1
+        fi
         echo "compile_status=success" >> $GITHUB_ENV
 
     # - name : Upload packages
