--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -33,7 +33,11 @@ jobs:
         echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
         echo "硬盘详情："
         df -Th
-        
+
+    - name: Generate cache epoch      # ← 新增
+      id: epoch                       # ← 新增
+      run: echo "week=$(date +%Y-%U)" >> $GITHUB_OUTPUT  # ← 新增
+    
     - name: Before freeing up disk space
       run: |
         echo "Before freeing up disk space"
@@ -103,7 +107,7 @@ jobs:
       uses: stupidloud/cachewrtbuild@main
       with:
         ccache: 'true'
-        mixkey: AX6-NSS-${{ env.REPO_BRANCH }}
+        mixkey: AX6-NSS-${{ steps.epoch.outputs.week }}-${{ env.REPO_BRANCH }}  # ← 只改这里
         prefix: ${{ github.workspace }}/openwrt
         
     - name: Update & Install feeds
