--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -33,11 +33,7 @@ jobs:
         echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
         echo "硬盘详情："
         df -Th
-
-    - name: Generate cache epoch      # ← 新增
-      id: epoch                       # ← 新增
-      run: echo "week=$(date +%Y-%U)" >> $GITHUB_OUTPUT  # ← 新增
-    
+        
     - name: Before freeing up disk space
       run: |
         echo "Before freeing up disk space"
@@ -107,7 +103,7 @@ jobs:
       uses: stupidloud/cachewrtbuild@main
       with:
         ccache: 'true'
-        mixkey: AX6-NSS-${{ steps.epoch.outputs.week }}-${{ env.REPO_BRANCH }}  # ← 只改这里
+        mixkey: AX6-NSS-${{ env.REPO_BRANCH }}
         prefix: ${{ github.workspace }}/openwrt
         
     - name: Update & Install feeds
@@ -117,52 +113,12 @@ jobs:
         ./scripts/feeds install -a
 
     - name: Load custom config
-      #run: |
-        #[ -e $FILES ] && mv $FILES openwrt/files
-        #[ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        # 追加 NSS 满血符号（无冲突、性能全开）
-        #cat $GITHUB_WORKSPACE/AX6-IPQ/nss-extra.config >> openwrt/.config
-        #cd openwrt
-        #export FORCE_UNCONFIGURED=1
-        #make defconfig V=s
-        #chmod +x $GITHUB_WORKSPACE/$DIY_SH
-        #$GITHUB_WORKSPACE/$DIY_SH
-      #run: |
-        #[ -e $FILES ] && mv $FILES openwrt/files
-        #[ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        #chmod +x $DIY_SH
-        #cd openwrt
-        #$GITHUB_WORKSPACE/$DIY_SH
-
       run: |
-        # 创建必要的目录结构
-        mkdir -p openwrt/files
-        # 复制配置和文件
-        if [ -e "$FILES" ]; then
-          echo "复制自定义文件..."
-          cp -r $FILES/* openwrt/files/ 2>/dev/null || true
-        fi
-        if [ -e "$CONFIG_FILE" ]; then
-          echo "复制配置文件..."
-          cp $CONFIG_FILE openwrt/.config
-        fi
-        # 运行DIY脚本
+        [ -e $FILES ] && mv $FILES openwrt/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x $DIY_SH
         cd openwrt
-        bash $GITHUB_WORKSPACE/$DIY_SH
-        # 确保配置正确
-        make defconfig
-
-    - name: Apply user patches
-      run: |
-        PATCH_DIR="$GITHUB_WORKSPACE/AX6-IPQ/patches"
-        if [ -d "$PATCH_DIR" ]; then
-          for patch in "$PATCH_DIR"/*.patch; do
-            [ -f "$patch" ] || continue
-            echo "Applying $(basename "$patch")"
-            patch -p1 -d feeds/luci < "$patch" || echo "Patch $(basename "$patch") skipped"
-          done
-        fi
+        $GITHUB_WORKSPACE/$DIY_SH
 
     # - name: SSH connect to Actions
       # uses: P3TERX/ssh2actions@main
@@ -182,10 +138,6 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-        if [ $? -ne 0 ]; then
-          echo "Compilation failed!"
-          exit 1
-        fi
         echo "compile_status=success" >> $GITHUB_ENV
 
     # - name : Upload packages
