--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -120,6 +120,19 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_SH
 
+# 🚀 【关键修改】注入 make defconfig 步骤 START
+    - name: Run defconfig and update feeds
+      working-directory: ./openwrt
+      run: |
+        # 确保 make defconfig 使用上一步移动进去的 .config 文件
+        make defconfig
+        
+    # 这一步是确保 make defconfig 已经执行，为下一步 download 准备
+    # ❗ 注意：我们将原来的 Download package 步骤拆分和简化了
+    # ❗ 原来的 Download package 步骤中的 make defconfig 被移动到了这里
+    # 🚀 【关键修改】注入 make defconfig 步骤 END
+
+
     # - name: SSH connect to Actions
       # uses: P3TERX/ssh2actions@main
       # if: (github.event.inputs.ssh == 'true') || contains(github.event.action, 'ssh')
