--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -106,40 +106,40 @@ jobs:
         mixkey: AX6-NSS-${{ env.REPO_BRANCH }}
         prefix: ${{ github.workspace }}/openwrt
         
-    - name: Update & Install feeds
-      working-directory: ./openwrt
-      run: |
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
 
     - name: Load custom config
       run: |
+        # 1. 移动配置和文件
         [ -e $FILES ] && mv $FILES openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        # 2. 运行 DIY 脚本 (替换 LuCI URL)
         chmod +x $DIY_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_SH
-        
 
-    # 🚀 【关键修改】运行 make defconfig START
+    # 🚀 【关键步骤 1】 Feeds Update 现在运行在 diy.sh 之后
+    - name: Update & Install feeds
+      working-directory: ./openwrt
+      run: |
+        # 此时 feeds.conf.default 已经被 diy.sh 修改
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
+
+    # 🚀 【关键步骤 2】 Configure options 确保 defconfig 在下载前运行
     - name: Configure firmware options
       working-directory: ./openwrt
       run: |
-        # 确保 make defconfig 使用上一步移动进去的正确配置 (.config)
+        # make defconfig 必须运行，它处理 feeds 安装的包
         make defconfig
-    # 🚀 【关键修改】运行 make defconfig END
-
-    # - name: SSH connect to Actions
-      # uses: P3TERX/ssh2actions@main
-      # if: (github.event.inputs.ssh == 'true') || contains(github.event.action, 'ssh')
 
     - name: Download package
       working-directory: ./openwrt
       run: |
+        # 确保 make defconfig 已经被移除
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
-
+        
     - name: Compile the firmware
       run: |
         chmod -R 755 openwrt
