--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -112,7 +112,7 @@ jobs:
       uses: stupidloud/cachewrtbuild@main
       with:
         ccache: 'true'
-        mixkey: AX6-NSS-${{ env.REPO_BRANCH }}
+        mixkey: AX6-NSS-${{ env.REPO_BRANCH }}-V5
         prefix: ${{ github.workspace }}/openwrt
         
     - name: Update & Install feeds
