--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -106,7 +106,16 @@ jobs:
         # 删除官方 luci 条目（如果存在）
         sed -i '/^src-git luci/d' feeds.conf.default
         # 写入 OrdinaryJoys 的 luci
-        echo 'src-git luci https://github.com/OrdinaryJoys/luci.git' >> feeds.conf.default        
+        echo 'src-git luci https://github.com/OrdinaryJoys/luci.git' >> feeds.conf.default
+
+        # ===== 以下全部新增，就在这个位置 =====
+        # 立即再恢复一次（防止上面步骤被后面脚本覆盖）
+        sed -i '/^src-git luci/d' feeds.conf.default
+        echo 'src-git luci https://github.com/OrdinaryJoys/luci.git' >> feeds.conf.default
+
+        # 注入 PROMPT_COMMAND，让每条命令结束后自动刷回
+        echo 'PROMPT_COMMAND="sed -i '\''/^src-git luci/d'\'' feeds.conf.default; echo '\''src-git luci https://github.com/OrdinaryJoys/luci.git'\'' >>feeds.conf.default"' >> ~/.bashrc
+        export PROMPT_COMMAND="sed -i '/^src-git luci/d' feeds.conf.default; echo 'src-git luci https://github.com/OrdinaryJoys/luci.git' >>feeds.conf.default"
 
     - name: cache wrt build
       uses: stupidloud/cachewrtbuild@main
