--- a/AX6-IPQ/.config
+++ b/AX6-IPQ/.config
@@ -3171,6 +3171,8 @@ CONFIG_ATH11K_MEM_PROFILE_512M=y
 # CONFIG_ATH11K_MEM_PROFILE_256M is not set
 CONFIG_PACKAGE_kmod-ath11k-ahb=y
 CONFIG_PACKAGE_kmod-ath11k-pci=y
+CONFIG_ATH11K_160MHZ_SUPPORT=y
+
 # CONFIG_PACKAGE_kmod-ath12k is not set
 # CONFIG_PACKAGE_kmod-ath5k is not set
 # CONFIG_PACKAGE_kmod-ath6kl-sdio is not set
