--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -83,12 +83,24 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
       
+    # - name: Initialize environment
+      # env:
+        # DEBIAN_FRONTEND: noninteractive
+      # run: | 
+        # sudo -E apt-get -qq update -y
+        # sudo -E apt-get -qq install -y $(curl -fsSL https://raw.githubusercontent.com/nantayo/My-Pkg/master/2305)
+        # sudo -E apt-get -qq autoremove --purge
+        # sudo -E apt-get -qq clean
+        # sudo timedatectl set-timezone "$TZ"
+        # sudo chown $USER:$GROUPS $GITHUB_WORKSPACE
+
     - name: Initialize environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: | 
         sudo -E apt-get -qq update -y
-        sudo -E apt-get -qq install -y $(curl -fsSL https://raw.githubusercontent.com/nantayo/My-Pkg/master/2305)
+        # 读取本地deps.txt安装依赖
+        sudo -E apt-get -qq install -y $(cat $GITHUB_WORKSPACE/deps.txt)
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
