--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -99,13 +99,20 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: | 
         sudo -E apt-get -qq update -y
-        # 读取本地deps.txt安装依赖
-        sudo -E apt-get -qq install -y $(cat $GITHUB_WORKSPACE/deps.txt)
+        
+        # 关键修改：检查并读取仓库内的deps.txt
+        if [ ! -f "$GITHUB_WORKSPACE/.github/workflows/deps.txt" ]; then
+          echo "错误：.github/workflows/deps.txt 文件不存在"
+          exit 1
+        fi
+        # 从正确路径读取依赖列表并安装
+        sudo -E apt-get -qq install -y $(cat "$GITHUB_WORKSPACE/.github/workflows/deps.txt")
+        
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
         sudo chown $USER:$GROUPS $GITHUB_WORKSPACE
-
+        
     - name: Clone source code
       working-directory: ./
       run: |
